# Curin

./: README.md  THIRD-PARTY-LICENSE.html
.github/workflows/: main.yml
resources/: curin_icon.key
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/platform/: mac.rs  mod.rs  windows.rs
